yml/ubuntu-desktop-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: ubuntu-desktop
  name: ubuntu-desktop
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ubuntu-desktop
  template:
    metadata:
      labels:
        run: ubuntu-desktop
    spec:
      containers:
      - image: jmcdice/k8s-ubuntu-desktop:latest
        imagePullPolicy: Always
        name: ubuntu-desktop
        ports:
        - containerPort: 6080
          protocol: TCP
