yml/ubuntu-desktop-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: ubuntu-desktop
  name: ubuntu-desktop
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: ubuntu-desktop
  type: ClusterIP
