yml/ubuntu-desktop-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubuntu-desktop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ubuntu-desktop
            port:
              number: 80
    host: host.example.com
